rename `collapse` directive to `header` change method from `expanded` to `open` change method from `collapse` to `close` change method from `isExpanded` to `isOpen` fix build process

--- a/src/expander-theme.scss
+++ b/src/expander-theme.scss
@@ -1,7 +1,7 @@
 .md-expander {
   background: '{{background-hue-1}}';
 
-  .md-expander-collapsed {
+  .md-expander-header {
     .md-title {
       color: '{{foreground-1}}';
     }
