--- a/src/expander.scss
+++ b/src/expander.scss
@@ -3,7 +3,7 @@
 }
 
 
-.md-expander-collapsed {
+.md-expander-header {
   display: flex;
   min-height: 48px;
   line-height: 48px;
@@ -71,12 +71,12 @@
 
 .md-expander {
   &:not(.md-no-animation) {
-    .md-expander-collapsed .md-expander-icon {
-      transition: transform 0.6s cubic-bezier(0.25, 0.8, 0.25, 1);
+    .md-expander-header .md-expander-icon {
+      transition: transform 0.4s cubic-bezier(0.25, 0.8, 0.25, 1);
     }
   }
 
-  .md-expander-collapsed {
+  .md-expander-header {
     .md-expander-icon {
       transform: rotate(90deg);
 
@@ -90,7 +90,7 @@
     }
   }
 
-  &.md-expanded > .md-expander-collapsed .md-expander-icon {
+  &.md-expanded > .md-expander-header .md-expander-icon {
     transform: rotate(-90deg);
   }
 }
